Day 1 final code with sample angular app.

--- a/day1/index.html
+++ b/day1/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 	<title>AngularJS training</title>
+	<script type="text/javascript" src="lib/angular.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </head>
-<body>
+<body ng-app="Login">
+
+<div ng-controller="LoginController">
+	<input ng-model="loginname" />
+	<input ng-model="loginname" />
+
+</div>
 
 </body>
 </html>
