--- a/day1/index.html
+++ b/day1/index.html
@@ -9,69 +9,27 @@
 </head>
 <body ng-app="Login">
 
-<div ng-controller="Login.LoginController">
-    <!-- AngularJS text fields FIRST and LAST NAME-->
-    <label for="userForm.fname">FName</label>: <input id="userForm.fname" ng-model="userForm.fname" /> <br/>
-    <label for="userForm.lname">LName</label>: <input id="userForm.lname" ng-model="userForm.lname" /> <br/>
-
-    <!-- AngularJS radio button GENDER -->
-    <label>Gender</label>:&nbsp;
-    <span ng-repeat="gender in gendersI18N">
-        <input id="userForm.gender.{{gender.key}}" name="userForm.gender" ng-model="userForm.gender" type="radio" ng-value="gender.key"/>
-        <label for="userForm.gender.{{gender.key}}">{{gender.label}}</label>&nbsp;&nbsp;
-    </span>
-    <!--<input id="userForm.gender.male" name="userForm.gender" ng-model="userForm.gender" type="radio" ng-value="{{genders.male}}"/>-->
-    <!--<label for="userForm.gender.male">{{genderStrings.male}}</label>&nbsp;&nbsp;-->
-    <!--<input id="userForm.gender.female" name="userForm.gender" ng-model="userForm.gender" type="radio" ng-value="{{genders.female}}"/>-->
-    <!--<label for="userForm.gender.female">{{genderStrings.female}}</label>&nbsp;&nbsp;-->
-    <br/>
-
-    <!-- AngularJS checkboxes SKILLS -->
-    <label>Skills:</label>&nbsp;
-    <span ng-repeat="skill in skillSet">
-        <input type="checkbox" ng-model="userForm.selectedSkills[$index]"
-               id="userForm.selectedSkills.{{skill.key}}"
-               ng-true-value="'{{skill.key}}'" ng-false-value="'none'"/>
-        <label for="userForm.selectedSkills.{{skill.key}}">{{skill.label}}</label>&nbsp;&nbsp;
-    </span>
-    <br/>
-
-    <!-- AngularJS select COUNTRY -->
-    <!-- http://stackoverflow.com/questions/13047923/working-with-select-using-angulars-ng-options -->
-    <label for="userForm.country">Countries:</label>&nbsp;
-    <!-- WITH NG-REPEAT on OPTIONS -->
-    <!--<select ng-model="userForm.country" id="userForm.country">-->
-        <!--<option ng-repeat="country in countries" value="{{country.key}}">{{country.label}}</option>-->
-    <!--</select>-->
-    <!-- WITH NG-OPTIONS -->
-    <select  ng-model="userForm.country" id="userForm.country" ng-options="country.label for country in countries track by country.key">
-    </select>
-    <br/>
-
-    <!-- AngularJS text fields AGE / SALARY-->
-    <label for="userForm.age">Age</label>: <input id="userForm.age" ng-model="userForm.age" /> <br/>
-    <label for="userForm.salary">Salary</label>: <input id="userForm.salary" ng-model="userForm.salary" /> <br/>
-
-    <button ng-click="saveUser()">Save User</button>
-	<hr/>
-
-	List of Users:<br/>
-    <div class="gridStyle" ng-grid="gridOpts"></div>
-
-	<!-- <ol>
-		<li ng-repeat="user in users">
-            {{user.fname | ellipsis: 2}}, {{user.lname}}, {{getGenderLabel(user.gender)}}, {{getSkillLabel(user.selectedSkills)}},
-            {{getCountryLabel(user.country)}}, {{user.age | AgeFilter}}, {{user.salary|currency}} <button ng-click="deleteUser(user.fname, $index)">X</button>
-        </li>
-	</ol> -->
+<div class="container">
+    <div>
+        <a ui-sref='userform'>User Form</a>
+        <a ui-sref='viewA'>View A</a>
+        <a ui-sref='ebook'>EBook</a>
+    </div>
+    <hr/>
+    <div ui-view></div>
 </div>
 
 </body>
 </html>
-<!-- JavaScript: JQuuery / Angular / ng-grid / -->
+<!-- JavaScript: JQuuery / Angular / router / ng-grid / -->
 <script type="text/javascript" src="lib/jquery.min.js"></script>
 <script type="text/javascript" src="lib/angular.js"></script>
+<script type="text/javascript" src="lib/router.min.js"></script>
 <script type="text/javascript" src="lib/ng-grid-2.0.14.min.js"></script>
 <script type="text/javascript" src="Utilities.js"></script>
 <script type="text/javascript" src="UserService.js"></script>
 <script type="text/javascript" src="app.js"></script>
+
+<script type="text/javascript" src="ebook/js/ebook-module.js"></script>
+<script type="text/javascript" src="ebook/js/ebookController.js"></script>
+<script type="text/javascript" src="ebook/js/ebookService.js"></script>
