1)Added gulp server to load 'training_app' 2)Loading partial javascript (NOT ng modules) using cusotm directive - load-partial-js 2)Loading partial javascript (ng modules) using loadOnDemand (https://github.com/AndyGrom/loadOnDemand)

--- a/training_app/index.html
+++ b/training_app/index.html
@@ -15,6 +15,7 @@
             <li class="active"><a ui-sref='userform'>User Form</a></li>
             <li class="active"><a ui-sref='viewA'>View A</a></li>
             <li class="active"><a ui-sref='ebook'>EBook</a></li>
+            <li class="active"><a ui-sref='partialjs'>Partial JS loading...</a></li>
         </ul>
     </div>
     <hr/>
@@ -23,11 +24,12 @@
 
 </body>
 </html>
-<!-- JavaScript: JQuuery / Angular / router / ng-grid / -->
+<!-- JavaScript: JQuery / Angular / router / ng-grid / loadOnDemand -->
 <script type="text/javascript" src="lib/jquery.min.js"></script>
 <script type="text/javascript" src="lib/angular.js"></script>
 <script type="text/javascript" src="lib/router.min.js"></script>
 <script type="text/javascript" src="lib/ng-grid-2.0.14.min.js"></script>
+<script type="text/javascript" src="lib/loadOnDemand.js"></script>
 <script type="text/javascript" src="Utilities.js"></script>
 <script type="text/javascript" src="UserService.js"></script>
 <script type="text/javascript" src="app.js"></script>
@@ -35,3 +37,6 @@
 <script type="text/javascript" src="ebook/js/ebook-module.js"></script>
 <script type="text/javascript" src="ebook/js/ebookController.js"></script>
 <script type="text/javascript" src="ebook/js/ebookService.js"></script>
+
+<script type="text/javascript" src="partialjs/js/partialjs-module.js"></script>
+<script type="text/javascript" src="partialjs/js/partialjsDirective.js"></script>
