scope examples added - $emit.

--- a/training_app/index.html
+++ b/training_app/index.html
@@ -16,6 +16,7 @@
             <li class="active"><a ui-sref='viewA'>View A</a></li>
             <li class="active"><a ui-sref='ebook'>EBook</a></li>
             <li class="active"><a ui-sref='partialjs'>Partial JS loading...</a></li>
+            <li class="active"><a ui-sref='dollar-scope'>$scope examples</a></li>
         </ul>
     </div>
     <hr/>
@@ -40,3 +41,6 @@
 
 <script type="text/javascript" src="partialjs/js/partialjs-module.js"></script>
 <script type="text/javascript" src="partialjs/js/partialjsDirective.js"></script>
+
+<script type="text/javascript" src="dollar-scope/js/dollarScope-module.js"></script>
+<script type="text/javascript" src="dollar-scope/js/dollarScope-controller.js"></script>
